--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,4 +1,5 @@
 # Maven
+
 # Build your Java project and run tests with Apache Maven.
 # Add steps that analyze code, save build artifacts, deploy, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/java
@@ -20,13 +21,7 @@ steps:
     publishJUnitResults: true
     testResultsFiles: '**/surefire-reports/TEST-*.xml'
     goals: 'package'
-- task: AzureRmWebAppDeployment@4
+- task: PublishPipelineArtifact@1
   inputs:
-    ConnectionType: 'AzureRM'
-    azureSubscription: 'aa-corp-nonprod-spoke'
-    appType: 'webAppLinux'
-    WebAppName: 'simple-app'
-    deployToSlotOrASE: true
-    ResourceGroupName: 'cor-d-zeaus-ra-finpcsvcs-rg'
-    SlotName: 'production'
-    packageForLinux: '$(System.DefaultWorkingDirectory)/**/*.zip'
+    targetPath: '$(Pipeline.Workspace)'
+    publishLocation: 'pipeline'
