--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,5 +23,6 @@ steps:
     goals: 'package'
 - task: PublishPipelineArtifact@1
   inputs:
-    targetPath: '/target/rest-service-0.0.1-SNAPSHOT.jar'
+    targetPath: '$(Pipeline.Workspace)/target/rest-service-0.0.1-SNAPSHOT.jar'
+    artifact: 'simple-app.jar'
     publishLocation: 'pipeline'
